<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/item_bg"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/black" />

        <View
            android:id="@+id/line_delete"
            android:layout_width="70dp"
            android:layout_height="1px"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_insert"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/item_bg"
            android:gravity="center"
            android:text="@string/insert"
            android:textColor="@color/black" />

        <View
            android:id="@+id/line_insert"
            android:layout_width="70dp"
            android:layout_height="1px"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/item_bg"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/black" />
    </LinearLayout>
</layout>